[package]
name = "rconcli"
version = "1.1.0"
description = "A simple RCON CLI for Minecraft servers."
authors = ["Ringo Hoffmann <contact@zekro.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
minecraft-client-rs = "0.1.3"
anyhow = "1"
config = "0.13.2"
string-join = "0.1.2"
directories = "4.0.1"